fix: harden tool confirmation claims